# trade

./: .gitignore
api/: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  dockerfile  pyproject.toml  ruff.toml
api/.github/workflows/: ci.yml
api/docs/: mvp.md
api/scripts/: lint.py  migrate.py  seed.py
api/src/: main.py
api/src/config/: config.py
api/src/core/: mixin.py  protocol.py  schema.py  security.py  success.py
api/src/data/db/: __init__.py
api/src/data/db/migration/: 0001_initial.py
api/src/data/db/model/: user.py
api/src/data/db/repo/: user_repo.py
api/src/infra/cache/: memory_cache.py  redis_cache.py
api/src/infra/event_bus/: memory_bus.py
api/src/infra/storage/: local_storage.py
api/src/route/auth/: __init__.py  auth.py
api/src/route/health/: __init__.py  health.py
api/src/route/user/: __init__.py  user.py
api/src/service/auth/: auth_service.py
api/src/service/health/: __init__.py  health_service.py
api/src/service/user/: __init__.py  user_service.py
api/src/shared/middleware/: error_boundary.py  request_id.py  timing.py
api/src/shared/observability/: metrics.py
api/src/shared/util/: pagination.py  sorting.py
api/src/task/: worker.py
api/src/task/jobs/: send_email.py
backend/: .dockerignore  README.md  docker-compose.yml  makefile  pyproject.toml
backend/.github/workflows/: cd.yml
backend/src/: main.py
backend/src/config/: logging.py
backend/src/core/: base.py  common.py  constant.py  error.py  format.py  jwt.py  type.py
backend/src/data/db/: connection.py
backend/src/infra/cache/: base.py
backend/src/infra/event_bus/: base.py
backend/src/infra/storage/: base.py  s3_storage.py
backend/src/module/auth/: __init__.py
backend/src/module/health/: __init__.py
backend/src/module/user/: __init__.py
backend/src/route/: __init__.py
backend/src/service/: __init__.py
backend/src/service/auth/: __init__.py
backend/src/shared/middleware/: logging.py
backend/src/shared/util/: validation.py
(+47 files in other folders)
