[project]
name = "trade-api"
version = "0.0.1"
description = "Trade application backend"
requires-python = "==3.14.6"
dependencies = [
    ### core ###
    "toml==0.10.2",
    "loguru==0.7.3",
    "fastapi[all]==0.136.1",
    ### db ###
    "tortoise-orm[asyncpg,accel]==1.1.7",
    ### auth ###
    "PyJWT[crypto]==2.10.1",
    "bcrypt==5.0.0",
    ### observability ###
    "prometheus-client==0.21.1",
    ### infra (optional — used by infra/cache/redis_cache.py) ###
    "redis==6.4.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "ruff==0.15.12",
    "ty==0.0.33",
]

[tool.tortoise]
tortoise_orm = "src.data.db.DB_CONFIG"
