[project]
name = "trade-backend"
version = "0.0.1"
description = "Trade application backend"
requires-python = "==3.14.6"
dependencies = [
    ### core ###
    "toml==0.10.2",
    "loguru==0.7.3",
    "fastapi[all]==0.136.1",
    ### db ###
    "tortoise-orm[asyncpg,accel]==1.1.7",
    ### auth ###
    "PyJWT[crypto]==2.10.1",
    "bcrypt==5.0.0",
    ### observability ###
    "prometheus-client==0.21.1",
    ### infra (optional — used by infra/cache/redis_cache.py) ###
    "redis==6.4.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "ruff==0.15.12",
    "ty==0.0.33",
]

[tool.tortoise]
tortoise_orm = "src.data.db.DB_CONFIG"

[tool.coverage.run]
source = ["src"]
omit = ["*/migration/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = [".venv", ".ruff_cache", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TID", "RUF"]
ignore = ["E501", "B008", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["T201"]
